Fixed Brew alignment

--- a/games/matcha_matches/static/matcha_matches/styles.scss
+++ b/games/matcha_matches/static/matcha_matches/styles.scss
@@ -145,8 +145,9 @@ $twisted-dark: #6F4E37;
 .brew {
      font-size:20px;
      color:$dark;
-     text-align:right;
+     text-align: right;
+     position: sticky;
+     top:100px;
      
-
 }
 
